# selene-language-server

./: .gitignore  Cargo.toml  README.md  mise.toml
crates/language-server/: Cargo.toml
crates/language-server/src/: main.rs  selene.rs
crates/zed/: Cargo.toml  extension.toml
crates/zed/src/: lib.rs
