[workspace]
resolver = "3"
members = ["crates/language-server", "crates/zed"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
] }
tower-lsp = "0.20.0"
zed_extension_api = "0.7.0"
